feat: update endpoint for packages
