# docs/swagger.json
@@ -1,119 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API for managing packages",
-        "title": "Packages Manager API",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/api",
     "paths": {
-        "/api/packages/new": {
-            "post": {
-                "description": "Create a new package with the provided data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "packages"
-                ],
-                "summary": "Create a new package",
-                "parameters": [
-                    {
-                        "description": "Packages data",
-                        "name": "package",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.Packages"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/main.Packages"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/projects/new": {
-            "post": {
-                "description": "Create a new project with the provided data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "projects"
-                ],
-                "summary": "Create a new project",
-                "parameters": [
-                    {
-                        "description": "Project data",
-                        "name": "project",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.Project"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/main.Project"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/packages": {
+        "/api/packages": {
             "get": {
                 "description": "Retrieve a list of all packages",
                 "produces": [
@@ -126,118 +17,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Packages"
+                                "$ref": "#/definitions/ent.Packages"
                             }
                         }
                     }
                 }
             }
         },
-        "/packages/{id}": {
-            "get": {
-                "description": "Retrieve a package by its ID",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get a package by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Packages ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.Packages"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update an existing package by its ID",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Update a package by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Packages ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Packages name",
-                        "name": "name",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Image URL",
-                        "name": "imageUrl",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Packages link",
-                        "name": "link",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Packages description",
-                        "name": "description",
-                        "in": "formData"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a package by its ID",
-                "summary": "Delete a package by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Packages ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/projects": {
+        "/api/projects": {
             "get": {
                 "description": "Retrieve a list of all projects",
                 "produces": [
@@ -250,24 +37,32 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Project"
+                                "$ref": "#/definitions/ent.Projects"
                             }
                         }
                     }
                 }
             }
         },
-        "/projects/{id}": {
+        "/packages/{id}": {
             "get": {
-                "description": "Retrieve a project by its ID",
+                "description": "Retrieve a package by its ID\nRetrieve a package by its ID",
                 "produces": [
+                    "application/json",
                     "application/json"
                 ],
-                "summary": "Get a project by ID",
+                "summary": "Get a package by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Project ID",
+                        "type": "integer",
+                        "description": "Projects ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Packages ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -277,51 +72,48 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Project"
+                            "$ref": "#/definitions/ent.Packages"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Update an existing project by its ID",
+                "description": "Update a package by ID",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Update a project by ID",
+                "summary": "Update a package",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Project ID",
+                        "type": "integer",
+                        "description": "Packages ID",
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Packages"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a package by ID",
+                "summary": "Delete a package",
+                "parameters": [
                     {
-                        "type": "string",
-                        "description": "Project name",
-                        "name": "name",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Image URL",
-                        "name": "imageUrl",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Project link",
-                        "name": "link",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Project description",
-                        "name": "description",
-                        "in": "formData"
+                        "type": "integer",
+                        "description": "packages ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -335,14 +127,75 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "Delete a project by its ID",
-                "summary": "Delete a project by ID",
+            }
+        },
+        "/projects/{id}": {
+            "get": {
+                "description": "Retrieve a project by its ID\nRetrieve a project by its ID",
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "summary": "Get a project by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Project ID",
+                        "type": "integer",
+                        "description": "Projects ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Projects ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Projects"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a project by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update a project",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Projects ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Projects"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a project by ID",
+                "summary": "Delete a project",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Projects ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -363,39 +216,56 @@
         }
     },
     "definitions": {
-        "main.Packages": {
+        "ent.Packages": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "description": "The time the package was created",
+                    "type": "string"
+                },
                 "description": {
+                    "description": "A brief description of the package",
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "description": "ID of the ent.",
+                    "type": "integer"
                 },
                 "link": {
+                    "description": "The link to the package",
                     "type": "string"
                 },
                 "name": {
+                    "description": "The name of the package",
+                    "type": "string"
+                },
+                "updated_at": {
+                    "description": "The time the package was last updated",
                     "type": "string"
                 }
             }
         },
-        "main.Project": {
+        "ent.Projects": {
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "Description holds the value of the \"description\" field.",
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "description": "ID of the ent.",
+                    "type": "integer"
                 },
-                "imageUrl": {
+                "image_url": {
+                    "description": "ImageURL holds the value of the \"image_url\" field.",
                     "type": "string"
                 },
                 "link": {
+                    "description": "Link holds the value of the \"link\" field.",
                     "type": "string"
                 },
                 "name": {
+                    "description": "Name holds the value of the \"name\" field.",
                     "type": "string"
                 }
             }
